#7 Global refactoring Closes #6 #2 add some tests on GPIO #10 fixes for building chain