@@ -14,8 +14,18 @@ dependencies {
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation("org.assertj:assertj-core:3.25.1")
+}
+
+jar {
+    manifest {
+        attributes(
+                "Enable-Native-Access": "ALL-UNNAMED"
+        )
+    }
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs ['--enable-native-access=ALL_UNNAMED']
 }
